fixed issue with right arrow not showing

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   width: 90%;
 }
 
-a {
+.imgLink {
   flex: 1 0 21%;
   margin: 3% 20px;
   }
